# lattices

./: lattices.cabal
Algebra/: Lattice.hs
Algebra/Lattice/: Dropped.hs  Levitated.hs  Lifted.hs
src/Algebra/: Lattice.hs  PartialOrd.hs
